refactor: removed all references to semla